# fh

./: .env  Cargo.toml  db.db
.sqlx/: query-0fa7defb82c8ffc3fd19aca8b70fad04b50a49a8dbf717f5a7b4e3b91489493e.json  query-1814d33179483c97bc31ab14d166aa7c2d030e99cb8cc0441cce231b1b1948bb.json  query-39fdc02d74915ee18ed30d83a8ec17a31d35acb3a4e9f0549cae3ba9504ed5dd.json  query-5edfaf793108f00b5c7d04de76211e30908c26a056d3dba6e20a760c54b0305a.json  query-7c8c2fa17edb0ce896770fb1f6b0ddfc32070d4512c426ce57890ea05d023872.json  query-a7978d4bd595269cf8d49c65dc68a4af1efa7aacced9e38a289143706b7221e8.json  query-b717bbdce387f08124f8b7e6aaa921caebf6b8c598329384d2f4454269c6a8c1.json  query-c3513ad1acbc4e4b899d86afcc1c2863640f1322557830e908ea80bc5374b6aa.json
migrations/: 20250418122420_new.sql
src/: main.rs  notes.rs  store.rs
test/: day_notes_2.md
